--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    padding-top: 40vh;
+    padding-top: 30vh;
     padding-bottom: 120px;
+  }
+
+  #studyDiv {
+    position: fixed;
+    height: 30vh;
+    width: calc(100% - 44px);
+    background: #fefff3;
+    top: 0;
+    left: 0;
+    z-index: 100;
   }
 
   #sectionsContainer {
@@ -59,9 +69,8 @@
   }
   .level-card:hover { transform: translateY(-3px); box-shadow: 0 6px 15px rgba(0,0,0,.12); }
   .level-card.selected { background: #3498db; color: #fff; }
-  #fixedPlayButton, #examToggleButton {
+  #fixedPlayButton {
     height: 48px;
-    width: 50%;
     padding: 0 15px;
     font-weight: 600;
     border: none;
@@ -74,20 +83,32 @@
   }
   #fixedPlayButton { background: #bdc3c7; cursor: not-allowed; }
   #fixedPlayButton.active { background: #3498db; cursor: pointer; box-shadow: 0 3px 10px rgba(0,0,0,.15); }
-  #examToggleButton { background: #2ecc71; cursor: pointer; }
-  #examToggleButton.active { background: #cc2e2e; box-shadow: 0 3px 10px rgba(0,0,0,.15); }
+
+  #examToggleButton { 
+    width: 100%;
+    max-height: 25vh;
+    font-weight: 600;
+    border: none;
+    background: white;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    padding: 15px 0px;
+    border-top: 3px solid #2ecc71;
+    border-bottom: 3px solid #2ecc71;
+  }
+
+  #examToggleButton.active { border: 3px solid #cc2e2e; box-shadow: 0 3px 10px rgba(0,0,0,.15); }
   #completedTimes { font-size: 12px; color: #2c3e50; font-weight: 500; }
   #completedTimes.instruction { color: #7f8c8d; font-style: italic; }
-  #practiceContainerBack {
-    position: fixed; bottom: 0; width: 100%; height: 125px;
-    background: linear-gradient(to top, rgba(255,255,255,.4) 0%, rgba(255,255,255,0) 50%);
-    backdrop-filter: blur(1px); -webkit-backdrop-filter: blur(1px); z-index: 100;
-  }
   #practiceContainer {
     position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%);
     background: #fff; padding: 10px 15px; border-radius: 12px;
     box-shadow: 0 5px 19px 1px rgba(0,0,0,.28); display: flex; gap: 10px;
-    z-index: 100; min-width: 250px; justify-content: space-between;
+    z-index: 100; justify-content: space-between; display: none; justify-content: center;
   }
   .examButton {
     background: #ecf0f1; border: none; padding: 4px 8px;
@@ -95,25 +116,38 @@
   }
   .examButton:hover { background: #d0d7de; }
 
-  #categoryMenu {
-      position: fixed;
-      height: 60vh;
-      width: 44px;
-      top: 40vh;
-      right: 0;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 5px 19px 1px rgba(0, 0, 0, .28);
-      display: flex;
-      gap: 10px;
-      z-index: 101;
-      justify-content: center;
-      flex-wrap: wrap;
+  #verticalBar {
+    position: fixed;
+    height: 100vh;
+    width: 44px;
+    top: 0;
+    right: 0;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 5px 19px 1px rgba(0, 0, 0, .28);
+    display: flex;
+    gap: 10px;
+    z-index: 101;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: flex-start;
+  }
+
+  #webTitle {
+    height: 30vh;
+    width: 100%;
+    background: #620808;
+    color: #ebebeb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    writing-mode: vertical-rl; /* texto vertical */
+    text-orientation: upright; /* cada carácter en pie */
   }
 
   .categoryButton {
     height: 48px;
-    width: 50%;
+    width: 100%;
     font-weight: 600;
     display: flex;
     align-items: center;
@@ -121,19 +155,13 @@
     font-size: 16px;
     border: none;
     background: none;
-    text-decoration: underline;
-    font-weight: bold;
   }
 
-  #scrollDot {
-    position: absolute;
-    right: 4px;
-    top: 0;
-    width: 12px;
-    height: 12px;
-    background: #3498db;
-    border-radius: 50%;
-    transition: top 0.1s linear;
+  #categoryMenu {
+    display: flex;
+    height: 40vh;
+    align-content: flex-start;
+    flex-wrap: wrap;
   }
 
   .level-card h3 { margin:0; font-size:14px; }
@@ -141,14 +169,17 @@
 </style>
 </head>
 <body>
-<header>Japanaap V0.1.1</header>
-<div id="categoryMenu"></div>
+  <div id="verticalBar">
+    <div id="webTitle">JAPANAPP</div>
+    <div id="categoryMenu"></div>
+    <button id="examToggleButton">EXAMEN</button>
+  </div>
+
+<div id="studyDiv"></div>
+
 <div id="sectionsContainer"></div>
-<div id="practiceContainerBack"></div>
 <div id="practiceContainer">
-  <button id="examToggleButton">Examen</button>
   <button id="fixedPlayButton">Practicar</button>
-  <span id="completedTimes"></span>
 </div>
 
 <script src="./js/hiraganaList.js"></script>
@@ -198,35 +229,94 @@
 
   // Manejo de click en tarjetas
   function handleCardClick(card) {
+    const practiceContainer = document.getElementById("practiceContainer");
+    const studyDiv = document.getElementById("studyDiv");
+
+    let currentList = allList.find(l => l.listName === card.dataset.listName);
+    let currentLevel = currentList.levels[card.dataset.index];
+
     if (examMode) {
       card.classList.toggle("selected");
       examSel = card.classList.contains("selected")
         ? [...examSel, card]
         : examSel.filter(x => x !== card);
+
       fixedBtn.classList.toggle("active", examSel.length > 0);
-      times.textContent = examSel.length
-        ? "Listo para comenzar el examen"
-        : "Selecciona los módulos a añadir al examen";
+      practiceContainer.style.display = examSel.length > 0 ? "flex" : "none";
+
+      // Mostrar información del último seleccionado en studyDiv
+      if (examSel.length) {
+        const lastCard = examSel[examSel.length - 1];
+        const list = allList.find(l => l.listName === lastCard.dataset.listName);
+        const level = list.levels[lastCard.dataset.index];
+        renderStudyDiv(level);
+      } else {
+        studyDiv.innerHTML = "";
+      }
+
     } else {
       if (selected === card) {
         card.classList.remove("selected");
         selected = null;
         fixedBtn.classList.remove("active");
+        studyDiv.innerHTML = "";
       } else {
         if (selected) selected.classList.remove("selected");
         card.classList.add("selected");
         selected = card;
         fixedBtn.classList.add("active");
+
+        // Mostrar información en studyDiv
+        renderStudyDiv(currentLevel);
       }
+
+      practiceContainer.style.display = selected ? "flex" : "none";
     }
   }
+
+  // Función para renderizar el contenido del nivel en studyDiv
+  function renderStudyDiv(level) {
+    const studyDiv = document.getElementById("studyDiv");
+    studyDiv.innerHTML = ""; // limpiar contenido previo
+
+    const title = document.createElement("p");
+    title.textContent = level.name;
+    title.style.paddingLeft = "10px";
+    title.style.marginBottom = "0px";
+    title.style.fontWeight = "bold";
+    title.style.color = "#2c3e50";
+    title.style.fontSize = "1.2rem";
+    studyDiv.appendChild(title);
+
+    const list = document.createElement("div");
+    list.style.display = "flex";
+    list.style.flexWrap = "wrap";
+
+    level.items.forEach(item => {
+      const card = document.createElement("div");
+      card.style.padding = "8px 12px";
+      card.style.fontSize = "15px";
+
+      card.style.display = "flex";
+      card.style.flexDirection = "column";
+      card.style.alignItems = "center";
+
+
+      card.innerHTML = `<span>${item.q}</span><span style="font-weight: bold;">${item.a}</span>`;
+      list.appendChild(card);
+    });
+
+    studyDiv.appendChild(list);
+  }
+
+
 
   // Botón examen
   examBtn.onclick = () => {
     examMode = !examMode;
     examBtn.classList.toggle("active", examMode);
     fixedBtn.textContent = examMode ? "Comenzar" : "Practicar";
-    examBtn.textContent = examMode ? "Cancelar" : "Examen";
+    examBtn.textContent = examMode ? "CANCELAR" : "EXAMEN";
 
     if (examMode) {
       if (selected) {
@@ -234,12 +324,10 @@
         selected = null;
         fixedBtn.classList.remove("active");
       }
-      times.textContent = "Selecciona los módulos a añadir al examen";
     } else {
       examSel.forEach(c => c.classList.remove("selected"));
       examSel = [];
       fixedBtn.classList.remove("active");
-      times.textContent = "";
     }
   };
 
@@ -261,10 +349,10 @@ uniqueCategories.forEach(cat => {
   const btn = document.createElement("button");
   switch (cat) {
     case "write":
-      btn.textContent = "W";
+      btn.textContent = "✏️";
       break;
     case "vocabulary":
-      btn.textContent = "V";
+      btn.textContent = "📖";
       break;
     default:
       btn.textContent = "?"; // opcional, por si no coincide nada
@@ -275,7 +363,10 @@ uniqueCategories.forEach(cat => {
   btn.onclick = () => {
     document.querySelectorAll(".section").forEach(section => {
       const sectionSelected = document.querySelector(`.section.${cat}`);
-      if (section) sectionSelected.scrollIntoView({ behavior: "smooth" });
+      if (sectionSelected) {
+        const y = sectionSelected.getBoundingClientRect().top + window.scrollY - (0.30 * window.innerHeight);
+        window.scrollTo({ top: y, behavior: "smooth" });
+      }
     });
   };
   categoryMenu.appendChild(btn);
@@ -289,41 +380,9 @@ uniqueCategories.forEach(cat => {
     window.scrollTo(0, Number(localStorage.getItem("lastScrollPosition") || 0))
   );
 
-const scrollDot = document.createElement("div");
-scrollDot.id = "scrollDot";
-categoryMenu.appendChild(scrollDot);
 
 window.addEventListener("scroll", () => {
-  const sections = document.querySelectorAll(".section");
-
-  let currentCat = null;
-  let minDist = Infinity;
-
-  // Detectar la sección más cercana al centro del viewport
-  sections.forEach(section => {
-    const rect = section.getBoundingClientRect();
-    const dist = Math.abs(rect.top + rect.height / 2 - window.innerHeight / 2);
-    if (dist < minDist) {
-      minDist = dist;
-      currentCat = section.classList[1];
-    }
-  });
-
-  if (currentCat) {
-    const btns = [...categoryMenu.querySelectorAll(".categoryButton")];
-    const targetBtn = btns.find(b =>
-      (currentCat === b.id)
-    );
-
-    if (targetBtn) {
-      const btnRect = targetBtn.getBoundingClientRect();
-      const menuRect = categoryMenu.getBoundingClientRect();
-
-      // mover el dot al centro del botón dentro del menú
-      scrollDot.style.top =
-        (btnRect.top + btnRect.height / 2 - menuRect.top - scrollDot.offsetHeight / 2) + "px";
-    }
-  }
+  //PONGA COMO SELECCIONADA LA CATEGORIA EN LA QUE ESTÁ
 });
 
 
