--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 <title>Practicar Japonés</title>
 <style>
+
+  * {
+  outline: none;          /* Quita el borde de foco azul */
+  user-select: none;      /* Opcional: evita selección de texto al hacer click */
+  -webkit-tap-highlight-color: transparent; /* Quita el highlight en móviles */
+  }
+
   body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -126,7 +133,6 @@
     border-radius: 12px;
     box-shadow: 0 5px 19px 1px rgba(0, 0, 0, .28);
     display: flex;
-    gap: 10px;
     z-index: 101;
     justify-content: center;
     flex-wrap: wrap;
@@ -148,8 +154,8 @@
   }
 
   .categoryButton {
-    height: 48px;
-    width: 100%;
+    height: 40px;
+    width: 40px;
     font-weight: 600;
     display: flex;
     align-items: center;
@@ -157,6 +163,9 @@
     font-size: 16px;
     border: none;
     background: none;
+    border: solid 1px gray;
+    border-radius: 69px;
+    margin-top: 5px;
   }
 
   #categoryMenu {
@@ -164,6 +173,7 @@
     height: 40vh;
     align-content: flex-start;
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   .level-card h3 { margin:0; font-size:14px; }
@@ -382,22 +392,38 @@ uniqueCategories.forEach(cat => {
   // Al arrancar
   showGanbatte();
 
-  // 2. Observador para detectar cambios posteriores
-const observer = new MutationObserver(() => {
-  showGanbatte();
-});
+    // 2. Observador para detectar cambios posteriores
+  const observer = new MutationObserver(() => {
+    showGanbatte();
+  });
 
-observer.observe(studyDiv, {
-  childList: true,
-  subtree: true
-});
+  observer.observe(studyDiv, {
+    childList: true,
+    subtree: true
+  });
 
-document.addEventListener("click", function enableFullscreen() {
-  if (!document.fullscreenElement) {
-    document.documentElement.requestFullscreen();
+
+
+function fitTextInCard(card) {
+  const h3 = card.querySelector("h3");
+  if (!h3) return;
+
+  let fontSize = 14; // tamaño inicial en px
+  h3.style.fontSize = fontSize + "px";
+
+  // Reducir tamaño hasta que quepa
+  while (h3.scrollWidth > card.clientWidth - 15 && fontSize > 8) {
+    fontSize -= 1;
+    h3.style.fontSize = fontSize + "px";
   }
-  // Quitamos el listener para que solo se active una vez
-  document.removeEventListener("click", enableFullscreen);
+}
+
+// Aplicarlo a todos los level-card
+document.querySelectorAll(".level-card").forEach(card => {
+  fitTextInCard(card);
+  // Opcional: si el texto cambia dinámicamente
+  const observer = new MutationObserver(() => fitTextInCard(card));
+  observer.observe(card, { childList: true, subtree: true });
 });
 
 
